<?xml version="1.0" encoding="UTF-8"?>
<!--
Projeto para iniciar testes de customizar um conector.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>io.github.fernandolopes</groupId>
  <artifactId>HTTPSink</artifactId>
  <version>0.0.23</version>
  <name>${project.groupId}:${project.artifactId}</name>
  <description>Projeto base para um connector kafka http sink</description>
  <url>https://github.com/fernandolopes/HTTPSink</url>
  
  <properties>
	<java.version>11</java.version>
	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <maven.compiler.release>${java.version}</maven.compiler.release>
    <maven-scm-provider-gitexe.version>1.11.2</maven-scm-provider-gitexe.version>
    <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
    <maven-source-plugin.version>2.2.1</maven-source-plugin.version>
  </properties>
  
  <distributionManagement>
    <repository>
        <uniqueVersion>false</uniqueVersion>
        <id>central</id>
        <name>Corporate Repository</name>
        <url>file:///Users/fernando/.m2</url>
        <layout>default</layout>
    </repository>
  </distributionManagement>

  <build>
    <plugins>
		<!--<plugin>
	      <groupId>io.confluent</groupId>
	      <artifactId>kafka-connect-maven-plugin</artifactId>
	      <version>0.12.0</version>
	      <executions>
			  <execution>
				<goals>
                	<goal>kafka-connect</goal>
                </goals>
	      		<configuration>  
		        <componentTypes>sink</componentTypes>
		        <name>HTTPSink</name>
		        <ownerUsername>HTTP</ownerUsername>
		        <description>some funny connector</description>
		      </configuration>
	      	</execution>
	      </executions>
	    </plugin>-->
		<plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>2.9.1</version>
            <executions>
                <execution>
                    <id>attach-javadocs</id>
                    <goals>
                        <goal>jar</goal>
                    </goals>
                </execution>
            </executions>
        </plugin>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>2.2.1</version>
            <executions>
                <execution>
                    <id>attach-sources</id>
                    <goals>
                        <goal>jar</goal>
                        <goal>test-jar</goal>
                    </goals>
                </execution>
            </executions>
        </plugin>
		<plugin>
		  <groupId>org.apache.maven.plugins</groupId>
		  <artifactId>maven-gpg-plugin</artifactId>
		  <version>1.5</version>
		  <executions>
		    <execution>
		      <id>sign-artifacts</id>
		      <phase>verify</phase>
		      <goals>
		        <goal>sign</goal>
		      </goals>
		    </execution>
		  </executions>
		  <configuration>
                <gpgArguments>
                    <arg>--pinentry-mode</arg>
                    <arg>loopback</arg>
                </gpgArguments>
            </configuration>
	    </plugin>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-release-plugin</artifactId>
            <version>${maven-release-plugin.version}</version>
            <configuration>
                <localCheckout>true</localCheckout>
                <pushChanges>false</pushChanges>
                <mavenExecutorId>forked-path</mavenExecutorId>
            </configuration>
            <dependencies>
                <dependency>
                    <groupId>org.apache.maven.scm</groupId>
                    <artifactId>maven-scm-provider-gitexe</artifactId>
                    <version>${maven-scm-provider-gitexe.version}</version>
                </dependency>
            </dependencies>
        </plugin>
        <plugin>
          <groupId>org.sonatype.central</groupId>
          <artifactId>central-publishing-maven-plugin</artifactId>
          <version>0.4.0</version>
          <extensions>true</extensions>
          <configuration>
            <publishingServerId>central</publishingServerId>
            <tokenAuth>true</tokenAuth>
            <autoPublish>true</autoPublish>
            <!--<ignorePublishedComponents>true</ignorePublishedComponents>-->
          </configuration>
        </plugin>
        <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
        </configuration>
      </plugin>
    </plugins>
</build>
  
  <developers>
    <developer>
      <name>Fernando Lopes</name>
      <email>fernandolopes.s@gmail.com</email>
      <organization>MyHome</organization>
      <organizationUrl>http://fernandolopez.com.br</organizationUrl>
    </developer>
  </developers>
  
  <licenses>
	  <license>
	    <name>MIT License</name>
	    <url>https://github.com/fernandolopes/HTTPSink?tab=MIT-1-ov-file</url>
	  </license>
  </licenses>
  
  <scm>
    <connection>scm:git:git@github.com:fernandolopes/HTTPSink.git</connection>
    <developerConnection>scm:git:ssh://github.com:fernandolopes/HTTPSink.git</developerConnection>
    <url>https://github.com/fernandolopes/HTTPSink/tree/main</url>
  </scm>
  
  <dependencies>
    <!-- Kafka -->
	<dependency>
	    <groupId>org.apache.kafka</groupId>
	    <artifactId>connect-api</artifactId>
	    <version>3.7.0</version>
	</dependency>
	<dependency>
	    <groupId>org.apache.kafka</groupId>
	    <artifactId>connect-transforms</artifactId>
	    <version>3.7.0</version>
	    <scope>provided</scope>
	</dependency>
	<dependency>
	    <groupId>org.slf4j</groupId>
	    <artifactId>slf4j-api</artifactId>
	    <version>2.0.12</version>
	</dependency>
	<dependency>
	    <groupId>org.slf4j</groupId>
	    <artifactId>slf4j-simple</artifactId>
	    <version>2.0.12</version>
	    <scope>runtime</scope>
	</dependency>
	<dependency>
		<groupId>org.apache.httpcomponents.core5</groupId>
		<artifactId>httpcore5-h2</artifactId>
		<version>5.2.4</version>
	</dependency>
	<dependency>
	    <groupId>org.json</groupId>
	    <artifactId>json</artifactId>
	    <version>20240303</version>
	</dependency>
	<dependency>
	    <groupId>com.fasterxml.jackson.core</groupId>
	    <artifactId>jackson-databind</artifactId>
	    <version>2.17.0</version>
	</dependency>
	<dependency>
	    <groupId>junit</groupId>
	    <artifactId>junit</artifactId>
	    <version>4.13.2</version>
	    <scope>test</scope>
	</dependency>
	<dependency>
	    <groupId>org.junit.jupiter</groupId>
	    <artifactId>junit-jupiter-api</artifactId>
	    <version>5.10.2</version>
	    <scope>test</scope>
	</dependency>
	<dependency>
	    <groupId>io.opentelemetry.instrumentation</groupId>
	    <artifactId>opentelemetry-kafka-clients-2.6</artifactId>
	    <version>1.19.0-alpha</version>
	</dependency>
	<dependency>
	    <groupId>io.opentelemetry</groupId>
	    <artifactId>opentelemetry-sdk-extension-autoconfigure</artifactId>
	    <version>1.36.0</version>
	</dependency>
	<dependency>
	    <groupId>io.opentelemetry</groupId>
	    <artifactId>opentelemetry-sdk</artifactId>
	    <version>1.36.0</version>
	</dependency>
	<dependency>
	    <groupId>io.opentelemetry</groupId>
	    <artifactId>opentelemetry-exporter-otlp</artifactId>
	    <version>1.36.0</version>
	</dependency>
  <dependency>
      <groupId>io.opentelemetry</groupId>
      <artifactId>opentelemetry-exporter-logging</artifactId>
      <version>1.36.0</version>
  </dependency>
	<!--<dependency>
	    <groupId>io.opentelemetry</groupId>
	    <artifactId>opentelemetry-sdk-logs</artifactId>
	    <version>1.36.0</version>
	</dependency>
	<dependency>
	    <groupId>io.opentelemetry</groupId>
	    <artifactId>opentelemetry-sdk-trace</artifactId>
	    <version>1.36.0</version>
	</dependency>-->

	<dependency>
        <groupId>io.opentelemetry</groupId>
        <artifactId>opentelemetry-api</artifactId>
        <version>1.36.0</version>
    </dependency>

  </dependencies>
</project>